--- a/client/src/modules/customer/edit.html
+++ b/client/src/modules/customer/edit.html
@@ -26,8 +26,7 @@
             </button>
         </div>
         <div class="panel-body">
-            <form class="form-horizontal"
-        validate.bind="validation">
+      <form class="form-horizontal">
         <div class="form-group">
             <label class="col-sm-2 control-label">First Name</label>
             <div class="col-sm-10">
