fix(client): fix customer UI (cancel not working properly. orm issue imho)

--- a/client/src/modules/customer/edit.html
+++ b/client/src/modules/customer/edit.html
@@ -16,12 +16,12 @@
             </button>
             <button class="btn btn-info"
             click.delegate="save()"
-            disabled.bind="isUnchanged || !customer.firstName || !customer.lastName">
+            disabled.bind="isUnchanged || isInvalid">
             Save
             </button>
             <button class="btn btn-info"
             click.delegate="delete()"
-            disabled.bind="!customer || !isUnchanged">
+            disabled.bind="isNew || !isUnchanged">
             Delete
             </button>
         </div>
