--- a/client-ts/src/modules/customer/list.html
+++ b/client-ts/src/modules/customer/list.html
@@ -20,7 +20,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr repeat.for="customer of customerList"
+                        <tr repeat.for="customer of customers"
                             click.delegate="$parent.gotoCustomer(customer)">
                             <td>
                                 <a click.delegate="$parent.gotoCustomer(customer)">
