--- a/client-wp/src/modules/customer/edit.html
+++ b/client-wp/src/modules/customer/edit.html
@@ -16,18 +16,17 @@
             </button>
             <button class="btn btn-info"
             click.delegate="save()"
-            disabled.bind="isUnchanged || !customer.firstName || !customer.lastName">
+            disabled.bind="isUnchanged || isInvalid">
             Save
             </button>
             <button class="btn btn-info"
             click.delegate="delete()"
-            disabled.bind="!customer || !isUnchanged">
+            disabled.bind="isNew || !isUnchanged">
             Delete
             </button>
         </div>
         <div class="panel-body">
-            <form class="form-horizontal"
-        validate.bind="validation">
+      <form class="form-horizontal">
         <div class="form-group">
             <label class="col-sm-2 control-label">First Name</label>
             <div class="col-sm-10">
