--- a/client-wp/index.html
+++ b/client-wp/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Aurelia</title>
+    <title><%- webpackConfig.metadata.title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="<%- webpackConfig.metadata.baseUrl %>">
+    <!-- imported CSS are concatenated and added automatically -->
   </head>
-  <body>
+  <body aurelia-app="main">
     <div class="splash">
-      <div class="message">Aurelia Navigation Skeleton</div>
+      <div class="message"><%- webpackConfig.metadata.title %></div>
       <i class="fa fa-spinner fa-spin"></i>
     </div>
-    <script src="bundle.js"></script>
+    <% if (webpackConfig.metadata.ENV === 'development') { %>
+    <!-- Webpack Dev Server reload -->
+    <script src="/webpack-dev-server.js"></script>
+    <% } %>
   </body>
 </html>
