--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,12 @@
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <script>
-      System.import('aurelia-bootstrapper');
+      System.import('jquery').then(function(jq) {
+        window.$ = jq;
+        window.jQuery = jq;
+
+        System.import('aurelia-bootstrapper');
+      });
     </script>
   </body>
 </html>
