--- a/client-wp/src/app.html
+++ b/client-wp/src/app.html
@@ -1,6 +1,5 @@
 <template>
-  <require from="nav-bar.html"></require>
-<!--  <require from="bootstrap/dist/css/bootstrap.css"></require> --> 
+  <require from="./nav-bar.html"></require>
   
   <nav-bar router.bind="router"></nav-bar>
 
