--- a/client-ts/src/modules/customer/edit.html
+++ b/client-ts/src/modules/customer/edit.html
@@ -16,7 +16,7 @@
             </button>
             <button class="btn btn-info"
             click.delegate="save()"
-            disabled.bind="isUnchanged || isInvalid">
+            disabled.bind="isUnchanged || xxisInvalid">
             Save
             </button>
             <button class="btn btn-info"
@@ -31,14 +31,14 @@
             <label class="col-sm-2 control-label">First Name</label>
             <div class="col-sm-10">
                 <input type="text" placeholder="First Name"  class="form-control"
-                value.bind="customer.firstName" />
+                value.bind="customer.firstName & validate" />
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Last Name</label>
             <div class="col-sm-10">
                 <input type="text" placeholder="Last Name" class="form-control"
-                value.bind="customer.lastName" />
+                value.bind="customer.lastName & validate" />
             </div>
         </div>
     </form>
